force-app/main/default/objects/VRT_Log__c/fields/VRT_DAT_LogDate__c.field-meta.xml
<CustomField>
    <fullName>VRT_DAT_LogDate__c</fullName>
    <label>Fecha de registro</label>
    <type>DateTime</type>
</CustomField>