force-app/main/default/objects/VRT_Log__c/fields/VRT_TXT_Message__c.field-meta.xml
<CustomField>
    <fullName>VRT_TXT_Message__c</fullName>
    <label>Mensaje</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>