force-app/main/default/objects/VRT_Log__c/fields/VRT_TXT_ProcessName__c.field-meta.xml
<CustomField>
    <fullName>VRT_TXT_ProcessName__c</fullName>
    <label>Nombre del Proceso</label>
    <length>100</length>
    <type>Text</type>
</CustomField>