force-app/main/default/objects/VRT_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>VRT_LKP_Rental__c</columns>
    <columns>VRT_TXT_Message__c</columns>
    <columns>VRT_DAT_LogDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>